# ai-agent-logs

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  challenge_description.txt  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
ai_agent_logs/: log_analyzer.py  log_parser.py  log_summary.py  log_types.py
data/: large_sample_logs.txt  sample_logs.txt
distributed/: multiprocessing_analyzer.py  ray_analyzer.py
tests/: test_benchmark_multiprocessing.py  test_benchmark_ray.py  test_generate_sample_logs.py  test_log_analyzer.py  test_log_parser.py  test_log_summary.py  test_multiprocessing.py  test_performance.py  test_ray.py
tools/: generate_sample_logs.py
